--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "moduleResolution": "bundler",
     "isolatedModules": true,
     "moduleDetection": "force",
+    "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "jsx": "react-jsx",
     "paths": {
